# SpaceInvaders

./: CMakeLists.txt  README.md  Untitled Document 1
inc/: SDL_Init.h  collision.h  collison.h  commonShip.h  draw.h  enemies.h  enemyAI.h  entities.h  inputs.h  player.h  utilities.h
src/: SDL_Init.c  collision.c  collison.c  commonShip.c  draw.c  enemies.c  enemyAI.c  entities.c  inputs.c  main.c  player.c  utilities.c
